--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Welcome to Skeptoholics</title>
 </head>
 <body>
+  <p><a href="article1.html">Read our first skeptical article</a></p>
     <h1>Hello, Skeptoholics!</h1>
     <p>This is a test page.</p>
 </body>
