--- a/index.html
+++ b/index.html
@@ -1,11 +1,88 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Welcome to Skeptoholics</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Skeptoholics | Question Everything</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #fafafa;
+      color: #222;
+      line-height: 1.6;
+    }
+    header {
+      background: #111;
+      color: #fff;
+      padding: 1.2rem;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+    }
+    nav {
+      margin-top: 0.5rem;
+    }
+    nav a {
+      color: #f4f4f4;
+      text-decoration: none;
+      margin: 0 12px;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+    h2 {
+      color: #333;
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 0.3rem;
+    }
+    footer {
+      background: #111;
+      color: #fff;
+      text-align: center;
+      padding: 1rem;
+      margin-top: 2rem;
+    }
+    footer a {
+      color: #f4f4f4;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
-  <p><a href="article1.html">Read our first skeptical article</a></p>
-    <h1>Hello, Skeptoholics!</h1>
-    <p>This is a test page.</p>
+
+  <header>
+    <h1>Skeptoholics</h1>
+    <p>Question, Observe, Question Some More</p>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="article1.html">Articles</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
+
+  <main>
+    <h2>Welcome</h2>
+    <p>Welcome to <strong>Skeptoholics</strong>, a place for critical thinking and skeptical inquiry. 
+    We explore assumptions, demand evidence, and challenge narratives with reasoned analysis.</p>
+
+    <h2>Latest Article</h2>
+    <p><a href="article1.html">Question Everything →</a></p>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Skeptoholics | Built with GitHub Pages</p>
+  </footer>
+
 </body>
 </html>
