--- a/article1.html
+++ b/article1.html
@@ -1,12 +1,97 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Skeptical Thinking: Question Everything</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Skeptoholics | Question Everything</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #fafafa;
+      color: #222;
+      line-height: 1.6;
+    }
+    header {
+      background: #111;
+      color: #fff;
+      padding: 1.2rem;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+    }
+    nav {
+      margin-top: 0.5rem;
+    }
+    nav a {
+      color: #f4f4f4;
+      text-decoration: none;
+      margin: 0 12px;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+    h2 {
+      color: #333;
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 0.3rem;
+    }
+    footer {
+      background: #111;
+      color: #fff;
+      text-align: center;
+      padding: 1rem;
+      margin-top: 2rem;
+    }
+    footer a {
+      color: #f4f4f4;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
-    <h1>Skeptical Thinking: Question Everything</h1>
-    <p>True skepticism is about questioning claims, demanding evidence, and remaining open to change when new facts emerge.  
-    A skeptic does not reject ideas outright but instead evaluates them critically.</p>
-    <p><a href="index.html">Back to Home</a></p>
+
+  <header>
+    <h1>Skeptoholics</h1>
+    <p>Question, Observe, Question Some More</p>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="article1.html">Articles</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
+
+  <main>
+    <h2>Question Everything</h2>
+    <p>
+      At Skeptoholics, we believe that asking questions is the most powerful tool 
+      for uncovering truth. Every assumption, every claim, every widely held belief 
+      should be subject to scrutiny. 
+    </p>
+    <p>
+      Skepticism is not about rejecting ideas — it’s about testing them. 
+      It’s about demanding evidence, weighing arguments, and being willing 
+      to change your mind when the facts demand it.
+    </p>
+    <p>
+      In a world full of noise, we choose to slow down, think critically, 
+      and ask the uncomfortable questions others might avoid. 
+    </p>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Skeptoholics | Built with GitHub Pages</p>
+  </footer>
+
 </body>
 </html>
