--- a/index.html
+++ b/index.html
@@ -62,12 +62,13 @@
 
   <header>
     <h1>Skeptoholics</h1>
-    <p>Question, Observe, Question Some More</p>
+    <p>Question, Observe, Then Question Some More</p>
     <nav>
       <a href="index.html">Home</a>
       <a href="article1.html">Articles</a>
       <a href="#">About</a>
       <a href="#">Contact</a>
+      <a href="Sup Page.html">Suplimentary Page</a>
     </nav>
   </header>
 
