--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Skeptoholics | Built with GitHub Pages</p>
+    <p>&copy; 2025 Skeptoholics | Built with Pragmitic Curiosity </p>
   </footer>
 
 </body>
