--- a/index.html
+++ b/index.html
@@ -1,89 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Skeptoholics | Question Everything</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #fafafa;
-      color: #222;
-      line-height: 1.6;
-    }
-    header {
-      background: #111;
-      color: #fff;
-      padding: 1.2rem;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2rem;
-    }
-    nav {
-      margin-top: 0.5rem;
-    }
-    nav a {
-      color: #f4f4f4;
-      text-decoration: none;
-      margin: 0 12px;
-      font-weight: bold;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    main {
-      max-width: 800px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-    }
-    h2 {
-      color: #333;
-      border-bottom: 2px solid #ddd;
-      padding-bottom: 0.3rem;
-    }
-    footer {
-      background: #111;
-      color: #fff;
-      text-align: center;
-      padding: 1rem;
-      margin-top: 2rem;
-    }
-    footer a {
-      color: #f4f4f4;
-      text-decoration: none;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Skeptoholics</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-  <header>
-    <h1>Skeptoholics</h1>
-    <p>Question, Observe, Then Question Some More</p>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="article1.html">Articles</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-      <a href="Sup Page.html">Suplimentary Page</a>
-    </nav>
+  <header class="site-header">
+    <div class="container">
+      <h1 class="logo">🧠 Skeptoholics</h1>
+      <p class="tagline">Question everything. Verify twice.</p>
+      <nav>
+        <ul>
+          <li><button id="toggleTheme">Toggle Theme</button></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#articles">Articles</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <main>
-    <h2>Welcome</h2>
-    <p>Welcome to <strong>Skeptoholics</strong>, a place for critical thinking and skeptical inquiry. 
-    We explore assumptions, demand evidence, and challenge narratives with reasoned analysis.</p>
+  <main class="container">
+    <section class="intro">
+      <p><strong>Welcome.</strong> This is a static site for curious minds and skeptical thinkers. It’s fast, clean, and deployable on GitHub Pages.</p>
+    </section>
 
-    <h2>Latest Article</h2>
-    <p><a href="article1.html">Question Everything →</a></p>
+    <section id="articles" class="articles-grid">
+      <article class="card">
+        <h2>Do You Actually Know the Earth is Round?</h2>
+        <p class="meta">October 5, 2025 • 6 min read</p>
+        <p>Most of us outsource certainty to authority. Here's how to build your own chain of evidence — and why it matters.</p>
+        <a href="#">Read more →</a>
+      </article>
+
+      <article class="card">
+        <h2>Entropy, Belief, and Why Overconfidence Fails</h2>
+        <p class="meta">September 28, 2025 • 5 min read</p>
+        <p>Why do we assume tidy dynamics? A pragmatic case for building systems that expect to be wrong.</p>
+        <a href="#">Read more →</a>
+      </article>
+
+      <article class="card">
+        <h2>How to Be Wrong (and Win)</h2>
+        <p class="meta">September 10, 2025 • 4 min read</p>
+        <p>Precision matters, but so does flexibility. A short playbook for iterating toward truth without wrecking your momentum.</p>
+        <a href="#">Read more →</a>
+      </article>
+    </section>
   </main>
 
-  <footer>
-    <p>&copy; 2025 Skeptoholics | Built with Pragmitic Curiosity </p>
+  <footer class="site-footer">
+    <p>© 2025 Skeptoholics | Built with Pragmatic Curiosity</p>
   </footer>
 
+  <script src="script.js"></script>
 </body>
 </html>
