--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav>
         <ul>
           <li><button id="toggleTheme">Toggle Theme</button></li>
-          <li><a href="#about">About</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="#articles">Articles</a></li>
         </ul>
       </nav>
