--- a/article1.html
+++ b/article1.html
@@ -4,92 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Skeptoholics | Question Everything</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #fafafa;
-      color: #222;
-      line-height: 1.6;
-    }
-    header {
-      background: #111;
-      color: #fff;
-      padding: 1.2rem;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2rem;
-    }
-    nav {
-      margin-top: 0.5rem;
-    }
-    nav a {
-      color: #f4f4f4;
-      text-decoration: none;
-      margin: 0 12px;
-      font-weight: bold;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    main {
-      max-width: 800px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-    }
-    h2 {
-      color: #333;
-      border-bottom: 2px solid #ddd;
-      padding-bottom: 0.3rem;
-    }
-    footer {
-      background: #111;
-      color: #fff;
-      text-align: center;
-      padding: 1rem;
-      margin-top: 2rem;
-    }
-    footer a {
-      color: #f4f4f4;
-      text-decoration: none;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <header>
-    <h1>Skeptoholics</h1>
-    <p>Question, Observe, Question Some More</p>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="article1.html">Articles</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-    </nav>
+  <header class="site-header">
+    <div class="container">
+      <h1 class="logo">🧠 Skeptoholics</h1>
+      <p class="tagline">Question, Observe, Question Some More</p>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="#" onclick="return false;" style="pointer-events:none;opacity:0.5;">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <main>
+  <main class="container">
     <h2>Question Everything</h2>
-    <p>
-      At Skeptoholics, we believe that asking questions is the most powerful tool 
-      for uncovering truth. Every assumption, every claim, every widely held belief 
-      should be subject to scrutiny. 
-    </p>
-    <p>
-      Skepticism is not about rejecting ideas — it’s about testing them. 
-      It’s about demanding evidence, weighing arguments, and being willing 
-      to change your mind when the facts demand it.
-    </p>
-    <p>
-      In a world full of noise, we choose to slow down, think critically, 
-      and ask the uncomfortable questions others might avoid. 
-    </p>
+    <p>At Skeptoholics, we believe that asking questions is the most powerful tool for uncovering truth. Every assumption, every claim, every widely held belief should be subject to scrutiny.</p>
+    <p>Skepticism is not about rejecting ideas — it’s about testing them. It’s about demanding evidence, weighing arguments, and being willing to change your mind when the facts demand it.</p>
+    <p>In a world full of noise, we choose to slow down, think critically, and ask the uncomfortable questions others might avoid.</p>
   </main>
 
-  <footer>
+  <footer class="site-footer">
     <p>&copy; 2025 Skeptoholics | Built with GitHub Pages</p>
   </footer>
 
