--- a/article.html
+++ b/article.html
@@ -3,35 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Skeptoholics | Question Everything</title>
+  <title>About | Skeptoholics</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <header class="site-header">
     <div class="container">
       <h1 class="logo">🧠 Skeptoholics</h1>
-      <p class="tagline">Question, Observe, Question Some More</p>
+      <p class="tagline">Suspend belief. Embrace uncertainty.</p>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="#" onclick="return false;" style="pointer-events:none;opacity:0.5;">Contact</a></li>
+          <li><button id="toggleTheme">Toggle Theme</button></li>
         </ul>
       </nav>
     </div>
   </header>
-
   <main class="container">
-    <h2>Question Everything</h2>
-    <p>At Skeptoholics, we believe that asking questions is the most powerful tool for uncovering truth. Every assumption, every claim, every widely held belief should be subject to scrutiny.</p>
-    <p>Skepticism is not about rejecting ideas — it’s about testing them. It’s about demanding evidence, weighing arguments, and being willing to change your mind when the facts demand it.</p>
-    <p>In a world full of noise, we choose to slow down, think critically, and ask the uncomfortable questions others might avoid.</p>
+    <h2>About Skeptoholics</h2>
+    <p><strong>Welcome to Skeptoholics.</strong> If you're a skeptoholic, you're someone who's passionate about questioning everything. Delve into this place where reality dissolves into uncertainty and beliefs have no use here. Ambiguity will be your guide as you navigate stories of questionable origin and authenticity.</p>
+    
+    <p>If you're not a skeptoholic yet, you soon will be—intoxicated by surreal tales that challenge your familiarity in just knowing, and then make certainty an uncomfortable proposition.</p>
+    
+    <p>When you become a skeptoholic, your perspective will broaden, and you'll leave here transformed—like a work horse released into the wild, your mind will grow strong and unrestrained by the restrictive stable of society.</p>
   </main>
-
   <footer class="site-footer">
     <p>&copy; 2025 Skeptoholics | Built with GitHub Pages</p>
   </footer>
-
+  <script src="script.js"></script>
 </body>
 </html>
