--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     <section class="intro">
       <h2>About Skeptoholics</h2>
       <p>Welcome to Skeptoholics. If you're a skeptoholic, you're someone who's passionate about questioning everything. Delve into this safe place where reality dissolves into uncertainty and leave all your beliefs behind. Let ambiguity be your guide as you navigate stories of unknown origin and questionable authenticity.</p>
-      <p>If you're not a skeptoholic yet, you soon will be. You'll become intoxicated by surreal tales that challenge your familiarity in just knowing things, and certaintity will become an uncomfortable position to hold.</p>
+      <p>If you're not a skeptoholic yet, you soon will be. You'll become intoxicated by surreal tales that challenge your familiarity in just knowing things, and certainty will become an uncomfortable position to hold.</p>
       <p>When you become a skeptoholic, your perspective will broaden, and you'll leave here transformed—like a work horse released into the wild, your mind will grow strong and unrestrained by the restrictive stables of society.</p>
     </section>
   </main>
