--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
       </article>
 
       <article class="card">
-        <h2>How to Be Wrong (and Win)</h2>
-        <p class="meta">September 10, 2025 • 4 min read</p>
-        <p>Precision matters, but so does flexibility. A short playbook for iterating toward truth without wrecking your momentum.</p>
-        <a href="#">Read more →</a>
-      </article>
+        <h2>The Volkov Files: A Cold War Secret That Won't Die</h2>
+        <p class="meta">October 6, 2025 • 10 min read</p>
+        <p>A Soviet scientist defects with evidence of extraterrestrial contact. Or does he? Forty years later, the truth remains tantalizingly uncertain.</p>
+        <a href="articles/volkov-defection.html">Read more →</a>
+     </article>
     </section>
   </main>
 
