Change button to link for theme toggle

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <p class="tagline">Question everything. Verify twice.</p>
       <nav>
         <ul>
-          <li><button id="toggleTheme">Toggle Theme</a></li>
+          <li><a href="toggleTheme">Toggle Theme</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="#articles">Articles</a></li>
         </ul>
