Change theme toggle link to button and defer script

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <p class="tagline">Question everything. Verify twice.</p>
       <nav>
         <ul>
-          <li><a href="toggleTheme">Toggle Theme</a></li>
+          <li><button id="toggleTheme" type="button">Toggle Theme</button></li>
           <li><a href="about.html">About</a></li>
           <li><a href="#articles">Articles</a></li>
         </ul>
@@ -54,6 +54,6 @@
     <p>© 2025 Skeptoholics | Built with Pragmatic Curiosity</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
