--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <p class="tagline">Question everything. Verify twice.</p>
       <nav>
         <ul>
-          <li><button id="toggleTheme" type="button">Toggle Theme</button></li>
+          <li><a id="toggleTheme" href="#">Toggle Theme</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="#articles">Articles</a></li>
         </ul>
