--- a/article.html
+++ b/article.html
@@ -15,7 +15,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><button id="toggleTheme">Toggle Theme</button></li>
+        <li><a id="toggleTheme" href="#">Toggle Theme</a></li>
         </ul>
       </nav>
     </div>
