--- a/article.html
+++ b/article.html
@@ -31,6 +31,6 @@
   <footer class="site-footer">
     <p>&copy; 2025 Skeptoholics | Built with GitHub Pages</p>
   </footer>
-  <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
