--- a/Sup Page.html
+++ b/Sup Page.html
@@ -13,6 +13,7 @@
       <p class="tagline">Question everything. Verify twice.</p>
       <nav>
         <ul>
+          <li><a id="toggleTheme" href="#">Toggle Theme</a></li>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="#" onclick="return false;" style="pointer-events:none;opacity:0.5;">Contact</a></li>
@@ -68,5 +69,6 @@
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
+  <script src="script.js" defer></script>
 </body>
 </html>
