--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
       <p class="tagline">Question everything. Verify twice.</p>
       <nav>
         <ul>
-          <li><button id="toggleTheme">Toggle Theme</button></li>
+          <li><a id="toggleTheme" href="#">Toggle Theme</a></li>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="#" onclick="return false;" style="pointer-events: none; opacity: 0.5;">Contact</a></li>
@@ -35,6 +35,6 @@
     <p>© 2025 Skeptoholics | Built with Pragmatic Curiosity</p>
   </footer>
 
-  <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
