--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Skeptoholics</title>
-  <link rel="stylesheet" href="style.css?v=2" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="site-header">
@@ -54,6 +54,6 @@
     <p>© 2025 Skeptoholics | Built with Pragmatic Curiosity</p>
   </footer>
 
-  <script src="script.js" defer></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
