--- a/about.html
+++ b/about.html
@@ -14,9 +14,10 @@
       <nav>
         <ul>
           <li><a id="toggleTheme" href="#">Toggle Theme</a></li>
+          <li><a id="toggleUV" href="#">UV Light</a></li>
           <li><a href="index.html">Home</a></li>
+          <li><a href="articles.html">Articles</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="#" onclick="return false;" style="pointer-events: none; opacity: 0.5;">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -28,13 +29,16 @@
       <p>Welcome to Skeptoholics. If you're a skeptoholic, you're someone who's passionate about questioning everything. Delve into this safe place where reality dissolves into uncertainty and leave all your beliefs behind. Let ambiguity be your guide as you navigate stories of unknown origin and questionable authenticity.</p>
       <p>If you're not a skeptoholic yet, you soon will be. You'll become intoxicated by surreal tales that challenge your familiarity in just knowing things, and certainty will become an uncomfortable position to hold.</p>
       <p>When you become a skeptoholic, your perspective will broaden, and you'll leave here transformed—like a work horse released into the wild, your mind will grow strong and unrestrained by the restrictive stables of society.</p>
-    </section>
+    
+      <p><a class="action-btn" href="contact.html">Contact</a></p>
+      <p class="uv-hidden" data-uv>UV NOTE: This site isn't about answers. It's about the incentives that manufacture them — and the comfort we buy with borrowed certainty.</p>
+</section>
   </main>
 
   <footer class="site-footer">
     <p>© 2025 Skeptoholics | Built with Pragmatic Curiosity</p>
   </footer>
 
-    <script src="script.js" defer></script>
+        <script src="script.js" defer></script>
 </body>
 </html>
