--- a/article.html
+++ b/article.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About | Skeptoholics</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="site-header">
@@ -13,9 +13,11 @@
       <p class="tagline">Suspend belief. Embrace uncertainty.</p>
       <nav>
         <ul>
+          <li><a id="toggleTheme" href="#">Toggle Theme</a></li>
+          <li><a id="toggleUV" href="#">UV Light</a></li>
           <li><a href="index.html">Home</a></li>
+          <li><a href="articles.html">Articles</a></li>
           <li><a href="about.html">About</a></li>
-        <li><a id="toggleTheme" href="#">Toggle Theme</a></li>
         </ul>
       </nav>
     </div>
@@ -31,6 +33,6 @@
   <footer class="site-footer">
     <p>&copy; 2025 Skeptoholics | Built with GitHub Pages</p>
   </footer>
-    <script src="script.js" defer></script>
+        <script src="script.js" defer></script>
 </body>
 </html>
