--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
       <nav>
         <ul>
           <li><a id="toggleTheme" href="#">Toggle Theme</a></li>
+          <li><a id="toggleUV" href="#">UV Light</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="articles.html">Articles</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="#articles">Articles</a></li>
         </ul>
       </nav>
     </div>
@@ -31,14 +33,14 @@
         <h2>Do You Actually Know the Earth is Round?</h2>
         <p class="meta">October 5, 2025 • 6 min read</p>
         <p>Most of us outsource certainty to authority. Here's how to build your own chain of evidence — and why it matters.</p>
-        <a href="#">Read more →</a>
+        <a href="articles/earth-round.html">Read more →</a>
       </article>
 
       <article class="card">
         <h2>Entropy, Belief, and Why Overconfidence Fails</h2>
         <p class="meta">September 28, 2025 • 5 min read</p>
         <p>Why do we assume tidy dynamics? A pragmatic case for building systems that expect to be wrong.</p>
-        <a href="#">Read more →</a>
+        <a href="articles/entropy-belief.html">Read more →</a>
       </article>
 
       <article class="card">
@@ -54,6 +56,6 @@
     <p>© 2025 Skeptoholics | Built with Pragmatic Curiosity</p>
   </footer>
 
-    <script src="script.js" defer></script>
+        <script src="script.js" defer></script>
 </body>
 </html>
