--- a/Sup Page.html
+++ b/Sup Page.html
@@ -14,9 +14,10 @@
       <nav>
         <ul>
           <li><a id="toggleTheme" href="#">Toggle Theme</a></li>
+          <li><a id="toggleUV" href="#">UV Light</a></li>
           <li><a href="index.html">Home</a></li>
+          <li><a href="articles.html">Articles</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="#" onclick="return false;" style="pointer-events:none;opacity:0.5;">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -69,6 +70,6 @@
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
-  <script src="script.js" defer></script>
+      <script src="script.js" defer></script>
 </body>
 </html>
