--- a/about.html
+++ b/about.html
@@ -1,44 +1,41 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About — Skeptoholics</title>
-  <link rel="stylesheet" href="style.css" />
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>About — Skeptoholics</title>
+<link href="style.css" rel="stylesheet"/>
 </head>
 <body>
-  <header class="site-header">
-    <div class="container">
-      <h1 class="logo">🧠 Skeptoholics</h1>
-      <p class="tagline">Question everything. Verify twice.</p>
-      <nav>
-        <ul>
-          <li><a id="toggleTheme" href="#">Toggle Theme</a></li>
-          <li><a id="toggleUV" href="#">UV Light</a></li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="articles.html">Articles</a></li>
-          <li><a href="about.html">About</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-
-  <main class="container">
-    <section class="intro">
-      <h2>About Skeptoholics</h2>
-      <p>Welcome to Skeptoholics. If you're a skeptoholic, you're someone who's passionate about questioning everything. Delve into this safe place where reality dissolves into uncertainty and leave all your beliefs behind. Let ambiguity be your guide as you navigate stories of unknown origin and questionable authenticity.</p>
-      <p>If you're not a skeptoholic yet, you soon will be. You'll become intoxicated by surreal tales that challenge your familiarity in just knowing things, and certainty will become an uncomfortable position to hold.</p>
-      <p>When you become a skeptoholic, your perspective will broaden, and you'll leave here transformed—like a work horse released into the wild, your mind will grow strong and unrestrained by the restrictive stables of society.</p>
-    
-      <p><a class="action-btn" href="contact.html">Contact</a></p>
-      <p class="uv-hidden" data-uv>UV NOTE: This site isn't about answers. It's about the incentives that manufacture them — and the comfort we buy with borrowed certainty.</p>
+<header class="site-header">
+<div class="container">
+<h1 class="logo">🧠 Skeptoholics</h1>
+<p class="tagline">Question everything. Verify twice.</p>
+<nav>
+<ul>
+<li><a href="#" id="toggleTheme">Toggle Theme</a></li>
+<li><a href="#" id="toggleUV">UV Light</a></li>
+<li><a href="index.html">Home</a></li>
+<li><a href="articles.html">Articles</a></li>
+<li><a href="about.html">About</a></li>
+</ul>
+</nav>
+</div>
+</header>
+<main class="container">
+<section class="intro">
+<h2>About Skeptoholics</h2>
+<p>Welcome to Skeptoholics. If you're a skeptoholic, you're someone who's passionate about questioning everything. Delve into this safe place where reality dissolves into uncertainty and leave all your beliefs behind. Let ambiguity be your guide as you navigate stories of unknown origin and questionable authenticity.</p><p><span class="uv-hidden" data-uv="1">Clue: the site is a mirror held up to your certainty.</span></p>
+<p>If you're not a skeptoholic yet, you soon will be. You'll become intoxicated by surreal tales that challenge your familiarity in just knowing things, and certainty will become an uncomfortable position to hold.</p>
+<p>When you become a skeptoholic, your perspective will broaden, and you'll leave here transformed—like a work horse released into the wild, your mind will grow strong and unrestrained by the restrictive stables of society.</p><p><span class="uv-hidden" data-uv="1">Clue: the point isn't doubt — it's calibration.</span></p>
+<p><a class="action-btn" href="contact.html">Contact</a></p>
+<p class="uv-hidden" data-uv="">This site isn't about answers. It's about the incentives that manufacture them — and the comfort we buy with borrowed certainty.</p>
 </section>
-  </main>
-
-  <footer class="site-footer">
-    <p>© 2025 Skeptoholics | Built with Pragmatic Curiosity</p>
-  </footer>
-
-        <script src="script.js" defer></script>
+</main>
+<footer class="site-footer">
+<p>© 2025 Skeptoholics | Built with Pragmatic Curiosity</p>
+</footer>
+<script defer="" src="script.js"></script>
 </body>
 </html>
