--- a/article.html
+++ b/article.html
@@ -1,38 +1,37 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About | Skeptoholics</title>
-  <link rel="stylesheet" href="style.css" />
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>About | Skeptoholics</title>
+<link href="style.css" rel="stylesheet"/>
 </head>
 <body>
-  <header class="site-header">
-    <div class="container">
-      <h1 class="logo">🧠 Skeptoholics</h1>
-      <p class="tagline">Suspend belief. Embrace uncertainty.</p>
-      <nav>
-        <ul>
-          <li><a id="toggleTheme" href="#">Toggle Theme</a></li>
-          <li><a id="toggleUV" href="#">UV Light</a></li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="articles.html">Articles</a></li>
-          <li><a href="about.html">About</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-  <main class="container">
-    <h2>About Skeptoholics</h2>
-    <p><strong>Welcome to Skeptoholics.</strong> If you're a skeptoholic, you're someone who's passionate about questioning everything. Delve into this place where reality dissolves into uncertainty and beliefs have no use here. Ambiguity will be your guide as you navigate stories of questionable origin and authenticity.</p>
-    
-    <p>If you're not a skeptoholic yet, you soon will be—intoxicated by surreal tales that challenge your familiarity in just knowing, and then make certainty an uncomfortable proposition.</p>
-    
-    <p>When you become a skeptoholic, your perspective will broaden, and you'll leave here transformed—like a work horse released into the wild, your mind will grow strong and unrestrained by the restrictive stable of society.</p>
-  </main>
-  <footer class="site-footer">
-    <p>&copy; 2025 Skeptoholics | Built with GitHub Pages</p>
-  </footer>
-        <script src="script.js" defer></script>
+<header class="site-header">
+<div class="container">
+<h1 class="logo">🧠 Skeptoholics</h1>
+<p class="tagline">Suspend belief. Embrace uncertainty.</p>
+<nav>
+<ul>
+<li><a href="#" id="toggleTheme">Toggle Theme</a></li>
+<li><a href="#" id="toggleUV">UV Light</a></li>
+<li><a href="index.html">Home</a></li>
+<li><a href="articles.html">Articles</a></li>
+<li><a href="about.html">About</a></li>
+</ul>
+</nav>
+</div>
+</header>
+<main class="container">
+<h2>About Skeptoholics</h2><p><span class="uv-hidden" data-uv="1">Evidence is not a feeling — it's a trail you can walk.</span></p>
+<p><strong>Welcome to Skeptoholics.</strong> If you're a skeptoholic, you're someone who's passionate about questioning everything. Delve into this place where reality dissolves into uncertainty and beliefs have no use here. Ambiguity will be your guide as you navigate stories of questionable origin and authenticity.</p><p><span class="uv-hidden" data-uv="1">Most certainty is rented, not owned.</span></p>
+<p>If you're not a skeptoholic yet, you soon will be—intoxicated by surreal tales that challenge your familiarity in just knowing, and then make certainty an uncomfortable proposition.</p><p><span class="uv-hidden" data-uv="1">Ask what would have to be true for this to be false.</span></p><p><span class="uv-hidden" data-uv="1">A neat story is a social technology.</span></p>
+<p>When you become a skeptoholic, your perspective will broaden, and you'll leave here transformed—like a work horse released into the wild, your mind will grow strong and unrestrained by the restrictive stable of society.</p><p><span class="uv-hidden" data-uv="1">Consensus is useful; it isn't a proof.</span></p>
+</main>
+<footer class="site-footer">
+<p>© 2025 Skeptoholics | Built with GitHub Pages</p>
+</footer>
+<script defer="" src="script.js"></script>
 </body>
 </html>
