--- a/index.html
+++ b/index.html
@@ -1,61 +1,56 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Skeptoholics</title>
-  <link rel="stylesheet" href="style.css" />
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Skeptoholics</title>
+<link href="style.css" rel="stylesheet"/>
 </head>
 <body>
-  <header class="site-header">
-    <div class="container">
-      <h1 class="logo">🧠 Skeptoholics</h1>
-      <p class="tagline">Question everything. Verify twice.</p>
-      <nav>
-        <ul>
-          <li><a id="toggleTheme" href="#">Toggle Theme</a></li>
-          <li><a id="toggleUV" href="#">UV Light</a></li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="articles.html">Articles</a></li>
-          <li><a href="about.html">About</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-
-  <main class="container">
-    <section class="intro">
-      <p><strong>Welcome.</strong> This is a static site for curious minds and skeptical thinkers. It’s fast, clean, and deployable on GitHub Pages.</p>
-    </section>
-
-    <section id="articles" class="articles-grid">
-      <article class="card">
-        <h2>Do You Actually Know the Earth is Round?</h2>
-        <p class="meta">October 5, 2025 • 6 min read</p>
-        <p>Most of us outsource certainty to authority. Here's how to build your own chain of evidence — and why it matters.</p>
-        <a href="articles/earth-round.html">Read more →</a>
-      </article>
-
-      <article class="card">
-        <h2>Entropy, Belief, and Why Overconfidence Fails</h2>
-        <p class="meta">September 28, 2025 • 5 min read</p>
-        <p>Why do we assume tidy dynamics? A pragmatic case for building systems that expect to be wrong.</p>
-        <a href="articles/entropy-belief.html">Read more →</a>
-      </article>
-
-      <article class="card">
-        <h2>The Volkov Files: A Cold War Secret That Won't Die</h2>
-        <p class="meta">October 6, 2025 • 10 min read</p>
-        <p>A Soviet scientist defects with evidence of extraterrestrial contact. Or does he? Forty years later, the truth remains tantalizingly uncertain.</p>
-        <a href="articles/volkov-defection.html">Read more →</a>
-     </article>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <p>© 2025 Skeptoholics | Built with Pragmatic Curiosity</p>
-  </footer>
-
-        <script src="script.js" defer></script>
+<header class="site-header">
+<div class="container">
+<h1 class="logo">🧠 Skeptoholics</h1>
+<p class="tagline">Question everything. Verify twice.</p>
+<nav>
+<ul>
+<li><a href="#" id="toggleTheme">Toggle Theme</a></li>
+<li><a href="#" id="toggleUV">UV Light</a></li>
+<li><a href="index.html">Home</a></li>
+<li><a href="articles.html">Articles</a></li>
+<li><a href="about.html">About</a></li>
+</ul>
+</nav>
+</div>
+</header>
+<main class="container">
+<section class="intro">
+<p><strong>Welcome.</strong> This is a static site for curious minds and skeptical thinkers. It’s fast, clean, and deployable on GitHub Pages.</p>
+</section>
+<section class="articles-grid" id="articles">
+<article class="card">
+<h2>Do You Actually Know the Earth is Round?</h2>
+<p class="meta">October 5, 2025 • 6 min read</p>
+<p>Most of us outsource certainty to authority. Here's how to build your own chain of evidence — and why it matters.</p><p><span class="uv-hidden" data-uv="1">Most certainty is rented, not owned.</span></p>
+<a href="articles/earth-round.html">Read more →</a>
+</article><p><span class="uv-hidden" data-uv="1">Evidence is not a feeling — it's a trail you can walk.</span></p>
+<article class="card">
+<h2>Entropy, Belief, and Why Overconfidence Fails</h2>
+<p class="meta">September 28, 2025 • 5 min read</p><p><span class="uv-hidden" data-uv="1">A neat story is a social technology.</span></p>
+<p>Why do we assume tidy dynamics? A pragmatic case for building systems that expect to be wrong.</p>
+<a href="articles/entropy-belief.html">Read more →</a>
+</article>
+<article class="card">
+<h2>The Volkov Files: A Cold War Secret That Won't Die</h2><p><span class="uv-hidden" data-uv="1">Ask what would have to be true for this to be false.</span></p>
+<p class="meta">October 6, 2025 • 10 min read</p>
+<p>A Soviet scientist defects with evidence of extraterrestrial contact. Or does he? Forty years later, the truth remains tantalizingly uncertain.</p>
+<a href="articles/volkov-defection.html">Read more →</a>
+</article>
+</section>
+</main>
+<footer class="site-footer">
+<p>© 2025 Skeptoholics | Built with Pragmatic Curiosity</p>
+</footer>
+<script defer="" src="script.js"></script>
 </body>
 </html>
